--- a/sass/theme.scss
+++ b/sass/theme.scss
@@ -46,7 +46,6 @@ button {
 }
 main {
     > section {
-        margin-top: 6rem;
         padding: 0 1rem;
     }
 }
